--- a/costume/style.css
+++ b/costume/style.css
@@ -155,6 +155,62 @@ img {
 
 }
 
+.proj-1{
+    
+    width:60%;
+    height: 300px;
+    border-radius: 14px;
+    border: 4px solid rgb(194, 150, 89);
+     background-image: url("Run-buddy.jpg");
+     background-size: cover;
+     background-position:top;
+     padding: 5px auto 25px auto;
+     margin: 20px;
+     margin-top: 2%;
+     margin-left: 30px;
+     display: flex;
+     flex-direction: column;
+
+}
+
+
+ span{
+    margin-top: auto;
+    width: 30%;
+    height: 40%;
+    background-color: #b9b987;
+    color: #393b4f;
+    padding: 10px 5px;
+    text-align: center;
+    border: 2px solid rgb(43, 145, 170);
+    border-radius: 15px;
+  }
+  .proj-text{
+      margin-top: 15%;
+
+  }
+  
+  .projs{
+    
+    width:30%;
+    height: 300px;
+    border-radius: 14px;
+    border: 4px solid  rgb(194, 150, 89);
+    background-color: #393b4f;
+    font-size: 22px;
+    font-weight: bold;
+     background-image: url("");
+     background-size: cover;
+     background-position: center;
+     padding: 5px auto 35px auto;
+     margin: 20px;
+     margin-top: 2%;
+     display: flex;
+     flex-direction: column;
+
+}
+
+
 hr {
     display: block;
     margin-top: 3%;
@@ -164,3 +220,48 @@ hr {
     border-width: 1px;
     width:80%
   }
+  footer {
+    
+    margin: 0;
+    display: flex;
+    justify-content:space-between;
+    padding: 20px;
+    
+    
+}
+
+footer h4 {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 40px;
+    color:rgb(194, 150, 89) ;
+    
+    margin-top: 20px;
+    margin-left: 70px;
+    padding: 0;
+    text-shadow: 1px 1px 1px red; 
+    
+}
+
+.footer-title{
+    width:30%;
+}
+
+
+.contact-me
+{
+    width: 69%;
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-1 {
+    width: 500px;
+
+    background-color:rgb(194, 150, 89);
+    
+    font-size: 25px;
+    margin-top: auto;
+}
+.contact-sizing{
+    margin-left: 50px;
+}
