--- a/costume/style.css
+++ b/costume/style.css
@@ -161,33 +161,55 @@ li {
     height: 300px;
     border-radius: 14px;
     border: 4px solid rgb(194, 150, 89);
-     background-image: url("Run-buddy.jpg");
+     background-image: url("flipped-hero-image.jpg");opacity:0.6;
      background-size: cover;
-     background-position:top;
+     background-position:center;
      padding: 5px auto 25px auto;
      margin: 20px;
      margin-top: 2%;
      margin-left: 30px;
+     font-size: 22px;
+    font-weight: bold;
      display: flex;
      flex-direction: column;
 
-}
+    }
 
 
  span{
     margin-top: auto;
-    width: 30%;
-    height: 40%;
+    margin-bottom:o;
+    width: 40%;
+    height: 20%;
     background-color: #b9b987;
     color: #393b4f;
     padding: 10px 5px;
-    text-align: center;
+   
     border: 2px solid rgb(43, 145, 170);
     border-radius: 15px;
+    
   }
-  .proj-text{
-      margin-top: 15%;
+  
+  
+  .calculater{
+    background-image: url("0_PWlqExs7Q9Rg6GV_.jfif"); 
 
+
+  }
+
+
+  .led-wall{
+    background-image: url("preview-2691OiCa8SKpJ0_0011.jpg"); 
+
+  }
+
+  .surf-rep{
+    background-image: url("Surfline-Homepage-1024x512.jpg"); 
+    
+  }
+
+  .web-devel {
+      background-image: url("top11.png");
   }
   
   .projs{
@@ -199,9 +221,9 @@ li {
     background-color: #393b4f;
     font-size: 22px;
     font-weight: bold;
-     background-image: url("");
-     background-size: cover;
-     background-position: center;
+    background-size: cover;
+    background-position: center;
+    opacity:0.6;
      padding: 5px auto 35px auto;
      margin: 20px;
      margin-top: 2%;
@@ -211,21 +233,23 @@ li {
 }
 
 
+
 hr {
     display: block;
     margin-top: 3%;
     margin-left: 10%;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     border-style: inset;
     border-width: 1px;
     width:80%
   }
   footer {
     
-    margin: 0;
+    margin-left: auto;
+
     display: flex;
-    justify-content:space-between;
-    padding: 20px;
+    flex-direction: column;
+    padding: 0;
     
     
 }
@@ -244,20 +268,27 @@ footer h4 {
 
 .footer-title{
     width:30%;
+    margin-bottom: 15px;
+   
+    margin-top: auto;
 }
 
 
 .contact-me
 {
-    width: 69%;
+    width: 80%;
     display: flex;
     flex-direction: column;
+    margin-top: auto;
+    margin-left: 50px;
 }
 
 .contact-1 {
-    width: 500px;
+    width: 300px;
     background-color:rgb(194, 150, 89);
-    font-size: 25px;
+    opacity: 0.5;
+    font-size: 15px;
+    color: rgb(228, 238, 135);
     margin-top: auto;
 }
 
@@ -271,10 +302,11 @@ footer h4 {
 @media screen and (max-width: 980px) {
 
     header {
-      
+        position: absolute;
         justify-content: center;
         margin: 0;
-        padding: 0; 
+        padding: 0;
+        width:100%;
         
     }
 
@@ -324,4 +356,74 @@ footer h4 {
         margin-left: 5%;
     }
     
+
+ @media screen and (max-width: 768px) {
     
+    .photo img {
+
+        width: 150px;
+    }
+    .bio-p {
+        margin-left: 0px;
+        text-align:left;
+        font-size: 12px;
+        margin-left: 0cm;
+    }
+
+    .about-me-title h2{
+        font-size: 20px;
+        margin-left: 0cm;
+    }
+    .achievements-title h3 {
+        font-size: 20px;
+
+    }
+
+    .footer-title h4{
+        font-size: 20px;
+    }
+
+    
+    .contact-1 {
+        width: 350px;
+        font-size:15px; 
+
+    }
+    
+    span {
+        font-size: 15px;
+    }
+
+    .projs{ 
+        height: 200px;
+        width:300px;
+        align-items: center ;
+ }
+ .proj-1 {
+     width:100%;
+ }
+
+ @media screen and (max-width: 575px) {
+    .projs{ 
+
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .footer-title h4 {
+        font-size: 15;
+        margin-left: 0;
+    }
+    .contact-1 {
+        width: 250px;
+        font-size:15px; 
+
+    }
+    .photo {
+
+    margin-top:15%;
+    }
+ }
+
+
+
+
