--- a/costume/style.css
+++ b/costume/style.css
@@ -13,13 +13,13 @@
     background-position:center;
     font-family: Helvetica, Arial, sans-serif;
   }
+
   
 header{
     background-color: rgb(109, 80, 84);
     margin: 0;
     display: flex;
     justify-content: space-between;
-    position: -webkit-sticky;
     position: fixed;
     width: 100%;
     top: 0;
@@ -34,9 +34,15 @@ header h1{
     font-weight:bolder;
     font-size: 45px;
     margin-top: 10px;
-    margin-left: 20px;     
+    margin-left: 20px;   
+      
     
 }
+
+h1 a{
+    text-decoration: none;
+}
+
 
 header nav ul{
     display: flex;
@@ -58,13 +64,26 @@ header ul li a {
    color:rgb(194, 150, 89);  
    text-decoration: none;
 }
+
+header nav ul li a:hover {
+    background: rgb(199, 153, 55); 
+    color: brown;
+    border-radius: 15px;
+    text-shadow: none;
+}
+
+
+
 header nav{
     margin: 7px 0;
 }
 
+
+
 li {
     list-style-type: none;
   }
+
 
 
 .bio {
@@ -107,7 +126,6 @@ li {
     
     font-size: 35px;
     color: rgb(194, 150, 89);
-     
     text-decoration: underline;
     margin-bottom: 15px;
   
@@ -139,7 +157,6 @@ li {
     
     font-style: italic;
     color: rgb(194, 150, 89);
-  
     font-size: 40px;
     text-align: left;
     margin: 10px;
@@ -174,9 +191,12 @@ li {
      flex-direction: column;
 
     }
+    .proj-1:hover{
+        opacity: 100;
+    }
 
 
- span{
+ .achievements a{
     margin-top: auto;
     margin-bottom:o;
     width: 40%;
@@ -184,9 +204,9 @@ li {
     background-color: #b9b987;
     color: #393b4f;
     padding: 10px 5px;
-   
     border: 2px solid rgb(43, 145, 170);
     border-radius: 15px;
+    text-decoration: none;
     
   }
   
@@ -196,17 +216,19 @@ li {
 
 
   }
-
+  
 
   .led-wall{
     background-image: url("preview-2691OiCa8SKpJ0_0011.jpg"); 
 
   }
+ 
 
   .surf-rep{
     background-image: url("Surfline-Homepage-1024x512.jpg"); 
     
   }
+  
 
   .web-devel {
       background-image: url("top11.png");
@@ -231,6 +253,16 @@ li {
      flex-direction: column;
 
 }
+.projs:hover{
+    opacity: 100;
+}
+
+
+
+.project-text{
+
+    font-size: 12;
+}
 
 
 
@@ -246,7 +278,6 @@ hr {
   footer {
     
     margin-left: auto;
-
     display: flex;
     flex-direction: column;
     padding: 0;
@@ -258,10 +289,9 @@ footer h4 {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 40px;
     color:rgb(194, 150, 89) ;
-    
     margin-top: 20px;
-    margin-left: 70px;
-    padding: 0;
+    margin-left: auto;
+    padding:10px 50px 10px;
     text-shadow: 1px 1px 1px red; 
     
 }
@@ -278,20 +308,27 @@ footer h4 {
 {
     width: 80%;
     display: flex;
-    flex-direction: column;
     margin-top: auto;
-    margin-left: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+   
 }
 
 .contact-1 {
-    width: 300px;
+    width: 400px;
     background-color:rgb(194, 150, 89);
     opacity: 0.5;
-    font-size: 15px;
+    font-size: 20px;
     color: rgb(228, 238, 135);
     margin-top: auto;
 }
-
+.contact-1:hover{
+    background-color: rgb(228, 143, 33);
+    color: yellow;
+}
 
 .contact-sizing{
     margin-left: 50px;
@@ -317,7 +354,10 @@ footer h4 {
         font-size: 20px;
         padding: 0;
         width: 100%;
+       
       }
+
+     
 
     header nav ul {
         margin-top: 18px;
