--- a/costume/style.css
+++ b/costume/style.css
@@ -28,16 +28,13 @@ header{
 }
 
 header h1 a{
-    padding: 20;
     color:rgb(194, 150, 89); 
     text-shadow: 3px 3px 4px red; 
     font-weight:bolder;
     font-size: 45px;
     margin-top: 10px;
     margin-left: 20px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;   
-      
-    
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;         
 }
 
 h1 a{
@@ -99,7 +96,7 @@ li {
     padding: 30px;
     width: 30%;
     margin-top: 3%;
-    margin-left: 100px;
+    margin-left: 75px;
 
 }
 
@@ -109,11 +106,10 @@ li {
   width: 300px;
   border-radius: 50%;
   display: block;
-  margin-left: 7%;
   margin-right: auto;
   margin-top: 20%;
   opacity: 0.8;
-  box-shadow: 0 4px 8px 0 rgba(250, 248, 248, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(250, 248, 248, 0.5);
 
   
 }
@@ -141,8 +137,6 @@ li {
     color:rgb(228, 238, 135);
     font-size: 20px;
     line-height: 1.2;
-    text-shadow: 0 0 10 px rgba(14, 12, 12, 0.5);
-    display: block;
     margin-right: 200px;
     
 }
@@ -166,11 +160,9 @@ li {
 
 }
 .achievements-title h3{
-    margin-left: 30px;
-    margin-top: 9%;
+   
     margin-left: 25px;
     text-decoration: underline;
-
 }
 
 .proj-1{
@@ -182,27 +174,24 @@ li {
      background-image: url("flipped-hero-image.jpg");opacity:0.6;
      background-size: cover;
      background-position:center;
-     padding: 5px auto 25px auto;
      margin: 20px;
      margin-top: 2%;
      margin-left: 30px;
      font-size: 22px;
     font-weight: bold;
      display: flex;
-     flex-direction: column;
-
     }
-    .proj-1:hover{
+
+
+.proj-1:hover{
         opacity: 100;
     }
 
 
  .achievements a{
     margin-top: auto;
-    margin-bottom:o;
     width: 40%;
-    height: 20%;
-    background-color: #b9b987;
+    background-color: rgb(66 222 176);
     color: #393b4f;
     padding: 10px 5px;
     border: 2px solid rgb(43, 145, 170);
@@ -211,7 +200,7 @@ li {
     
   }
   
-  
+
   .calculater{
     background-image: url("0_PWlqExs7Q9Rg6GV_.jfif"); 
 
@@ -241,17 +230,15 @@ li {
     height: 300px;
     border-radius: 14px;
     border: 4px solid  rgb(194, 150, 89);
-    background-color: #393b4f;
     font-size: 22px;
     font-weight: bold;
     background-size: cover;
     background-position: center;
     opacity:0.6;
-     padding: 5px auto 35px auto;
      margin: 20px;
      margin-top: 2%;
      display: flex;
-     flex-direction: column;
+    
 
 }
 .projs:hover{
@@ -259,38 +246,19 @@ li {
 }
 
 
-
-.project-text{
-
-    font-size: 12;
-}
-
-
-
 hr {
-    display: block;
     margin-top: 3%;
     margin-left: 10%;
-    margin-bottom: 20px;
-    border-style: inset;
-    border-width: 1px;
     width:80%
   }
   
-  footer {
-    
-    margin-left: auto;
-    padding: 0;
-    
-    
-}
+
 
 footer h4 {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 40px;
     color:rgb(194, 150, 89) ;
     margin-top: 20px;
-    margin-left: auto;
     padding:10px 50px 10px;
     text-shadow: 1px 1px 1px red; 
     
@@ -303,12 +271,7 @@ footer h4 {
 {
     width: 80%;
     display: flex;
-    margin-top: auto;
-    margin-left: auto;
-    margin-right: auto;
-    display: flex;
     flex-direction: column;
-    justify-items: center;
     margin-left: 700px;
    
 }
@@ -316,26 +279,29 @@ footer h4 {
 .contact-1 {
     width: 400px;
     background-color:rgb(194, 150, 89);
-    opacity: 0.5;
     font-size: 20px;
-    color: rgb(228, 238, 135);
+    color: rgb(58 1 82);
     margin-top: auto;
+   text-align: center;
 }
 .contact-1:hover{
     background-color: rgb(228, 143, 33);
-    color: yellow;
+  
 }
 
 .contact-sizing{
     margin-left: 50px;
 }
 
-
+.contact-me a{
+    text-decoration: none;
+    text-align: center;
+}
 
 @media screen and (max-width: 980px) {
 
     header {
-        position: absolute;
+
         justify-content: center;
         margin: 0;
         padding: 0;
@@ -371,7 +337,9 @@ footer h4 {
     }
 
     
-
+    .photo{
+        margin-left: 5px;
+    }
     .photo img {
       
        margin-bottom: 0;
@@ -407,6 +375,7 @@ footer h4 {
         font-size: 10px;
     }
      .contact-me{
+         margin-top: 3px;
          margin-left: 30%;
 
     }
@@ -417,12 +386,19 @@ footer h4 {
  @media screen and (max-width: 768px) {
 
     header h1 a{
-        margin-bottom: 3%;
+        margin-bottom: 4%;
     }
     
     .photo img {
+      
 
         width: 200px;
+    }
+
+    .photo{
+        margin-left: 0;
+        padding: 0%;
+
     }
     .bio-p {
         margin-left: 0px;
@@ -433,7 +409,7 @@ footer h4 {
 
     .about-me {
         margin: 0;
-        margin-left: 10px;
+        
     }
 
 
@@ -448,7 +424,7 @@ footer h4 {
     }
     .proj-1{
 
-        margin-left: 20%;
+        margin-left: 5%;
     }
     .projs{
         margin-left: 40%;
@@ -479,6 +455,13 @@ footer h4 {
  }
 
  @media screen and (max-width: 575px) {
+
+    header h1 a {
+        position: absolute;
+        margin-left: 20%;
+        margin-top: 1px;
+    }
+    
 
     .photo{
         width: 200px;
