--- a/costume/style.css
+++ b/costume/style.css
@@ -1,4 +1,6 @@
-
+:root {
+    --main-color:rgb(194, 150, 89); 
+  }
 * {
     margin: 2px;
     padding: 0;
@@ -28,7 +30,7 @@ header{
 }
 
 header h1 a{
-    color:rgb(194, 150, 89); 
+    color:var(--main-color); 
     text-shadow: 3px 3px 4px red; 
     font-weight:bolder;
     font-size: 45px;
@@ -59,7 +61,7 @@ header ul li a {
    font-weight:bold;
     font-size: 1.55vw;
    font-family: Arial, Helvetica, sans-serif;
-   color:rgb(194, 150, 89);  
+   color:var(--main-color);  
    text-decoration: none;
 }
 
@@ -102,13 +104,12 @@ li {
 
 
 .photo img {
-  border: 3px solid rgb(194, 150, 89);
+  border: 3px solid var(--main-color);
   width: 300px;
   border-radius: 50%;
   display: block;
   margin-right: auto;
   margin-top: 20%;
-  opacity: 0.8;
   box-shadow: 0 4px 8px 0 rgba(250, 248, 248, 0.5);
 
   
@@ -123,7 +124,7 @@ li {
 .about-me-title h2{
     
     font-size: 35px;
-    color: rgb(194, 150, 89);
+    color: var(--main-color);
     text-decoration: underline;
     margin-bottom: 15px;
   
@@ -151,7 +152,7 @@ li {
 .achievements-title {
     
     font-style: italic;
-    color: rgb(194, 150, 89);
+    color: var(--main-color);
     font-size: 40px;
     text-align: left;
     margin: 10px;
@@ -170,7 +171,7 @@ li {
     width:60%;
     height: 300px;
     border-radius: 14px;
-    border: 4px solid rgb(194, 150, 89);
+    border: 4px solid var(--main-color);
      background-image: url("flipped-hero-image.jpg");opacity:0.6;
      background-size: cover;
      background-position:center;
@@ -229,7 +230,7 @@ li {
     width:30%;
     height: 300px;
     border-radius: 14px;
-    border: 4px solid  rgb(194, 150, 89);
+    border: 4px solid  var(--main-color);
     font-size: 22px;
     font-weight: bold;
     background-size: cover;
@@ -278,7 +279,7 @@ footer h4 {
 
 .contact-1 {
     width: 400px;
-    background-color:rgb(194, 150, 89);
+    background-color:var(--main-color);
     font-size: 20px;
     color: rgb(58, 1, 82);
    
