--- a/assets/Css/style.css
+++ b/assets/Css/style.css
@@ -21,7 +21,7 @@
   }
 
   
-header{
+header {
     background-color: rgb(109, 80, 84);
     margin: 0;
     display: flex;
@@ -175,10 +175,10 @@ li {
 .proj-1{
     
     width:60%;
-    height: 300px;
+    height: 400px;
     border-radius: 14px;
     border: 4px solid var(--main-color);
-     background-image: url("../Pictures/flipped-hero-image.jpg") ;opacity:0.6;
+     background-image: url("../Pictures/PetSearch.JPG") ;opacity:0.6;
      background-size: cover;
      background-position:center;
      margin: 20px;
@@ -200,7 +200,7 @@ li {
     width: 40%;
     background-color: rgb(66 222 176);
     color: #393b4f;
-    padding: 10px 5px;
+    /* padding: 10px 5px; */
     border: 2px solid rgb(43, 145, 170);
     border-radius: 15px;
     text-decoration: none;
@@ -236,7 +236,7 @@ li {
   .projs{
     
     width:30%;
-    height: 300px;
+    height: 400px;
     border-radius: 14px;
     border: 4px solid  var(--main-color);
     font-size: 22px;
